v1.5.0 01. Done. Fix dual App icon existence. -> fixed at Manifest file by remove duplicated intent filter      1.1 Done. the Launcher not showing! -> fixed at Manifest file update launcher 02. Done. Security Warning about JQuery version. -> fixed by using the latest jquery version. 03. Done. Fix Faster manual scroll is faster after setting show/hide. -> fixed by unbind the touchmove at showSetting function. 04. Done. use alternative way to catch tap/longtap. -> fixed the js by use external library for longpress and tuning touch ssevents 05. Done. Some Enhancement in HTML, CSS and JS. 06. Done. Add code/controls for Future Development to communicate with webview and vice versa using JavaScript Bridge. 07. Done. demo view shown briefly after launcher switching. -> fixed by tuning css of divDemo and divSora display rule. 08. no fix. divSora Scrolling after click yes/no of demo. -> error by double manual touches due to some delay, ok if user waits normally. 09. Done. make the app full screen. -> by updating styles.xml AppTheme. 10. Done. white screen after mainActivity intent starting. -> fixed by make wvMain Background transparent and fadein/out anim. 11. Done? always set screen to normal at opening setting screen mode. -> fixed by add delay on showing the color selection view. 12. Done. Background not showing on iPhone browsers. -> fixed by updating CSS rules.

--- a/app/src/main/assets/htmls/styles.css
+++ b/app/src/main/assets/htmls/styles.css
@@ -9,9 +9,9 @@ for suggestions and commments please email at: s@SamerLulu.com  / Samer.Lulu@gma
 
 body {
     direction: rtl;
-    background: rgb(243, 237, 209);
-    /* Normal Mode */
-    background: linear-gradient(90deg, rgba(243, 237, 209, 1) 0%, rgba(248, 244, 217, 1) 50%, rgba(241, 236, 213, 1) 100%);
+    background: rgba(18, 42, 59, 0.95);
+    /* Dark Mode */
+    background: radial-gradient(circle, rgb(18, 42, 59) 0%, rgb(45, 94, 129) 50%, rgb(18, 42, 59) 100%);
     user-select: none;
 }
 
@@ -75,6 +75,7 @@ body {
     left: 0;
     height: 100%;
     width: 100%;
+    background:  rgba(18, 42, 59, 0.8);
 }
 
 #divSettingsInner {
@@ -101,7 +102,8 @@ body {
     text-align: center;
     margin: 0;
     padding: 0;
-    display: block;
+    /* display: block; */
+    display: none;
 }
 
 #demoImg {
@@ -207,7 +209,7 @@ body {
     padding: 0 20px;
     overflow: scroll;
     height: 80vh;
-    margin-top: 1vh;
+    margin: 2vh 0;
 }
 
 #imgSFL_Logo {
@@ -251,7 +253,7 @@ body {
     position: absolute;
     top: 50%;
     left: 50%;
-    transform: translate(-50%, -50%);
+    transform: translate(-50%, -54%);
 }
 
 .inlineLink {
@@ -358,4 +360,12 @@ body {
         background: black;
         bottom: auto;
     }
+}
+
+#Settings, .SettingBox {
+    -webkit-backdrop-filter: blur(10px);
+    -moz-backdrop-filter: blur(10px);
+    -o-backdrop-filter: blur(10px);
+    -ms-backdrop-filter: blur(10px);
+    backdrop-filter: blur(10px);
 }
